add link to api documentation (created and published using Postman)

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Welcome to the Cafe & Wifi API</h1>
+    <a href="https://documenter.getpostman.com/view/18827557/UVR8q8Hi">API Documentation</a>
 </body>
 </html>
